# aes-grinder

./: README.md  TODO.md  contacts.md  draw.txt  groups.xlsx
aes_grinder/: .gitignore  Cargo.toml  README
aes_grinder/equation_system/: 1r_3.txt  comparaison.txt  dp_example.eqs  dp_example_comment.eqs  little.eqs  sub_our.txt  sub_true.txt
aes_grinder/src/: algo.rs  cli.rs  debug.rs  exaustive_search.rs  exhaustive_search.rs  main.rs  matrix.rs  parser.rs  sparse_matrix.rs  utils.rs
aes_grinder/test/: complex_00.eqs  complex_01.eqs  complex_02.eqs  complex_03.eqs  little.eqs  only_comments.eqs  simple_00.eqs  simple_01.eqs  simple_02.eqs  simple_03.eqs  simple_04.eqs  simple_05.eqs  simple_06.eqs  simple_07.eqs  to_dot_00.dot  to_dot_00_valid.dot  to_dot_01_valid.dot  to_dot_02.dot  to_dot_02_valid.dot
delivrables/: cahier_de_labo.md
report_material/: intro.txt  intro_and_parts.txt  pseudo-code.txt  rapport_notes.txt
